# Prism

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  clippy.toml  deny.toml  rust-toolchain.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
crates/prism-cli/: Cargo.toml
crates/prism-cli/src/: commands.rs  main.rs  prompt.rs  text.rs
crates/prism-cli/src/tui/: ipc.rs  mod.rs  state.rs  update.rs  view.rs
crates/prism-core/: Cargo.toml
crates/prism-core/examples/: local_chat.rs
crates/prism-core/src/: bundle.rs  identity.rs  keystore.rs  lib.rs  recovery.rs  secret.rs  session.rs  session_store.rs  storage.rs  validate.rs
crates/prism-core/tests/: kat_vectors.rs  keystore.rs  session.rs  session_persistence.rs  session_props.rs
crates/prism-daemon/: Cargo.toml
crates/prism-daemon/src/: events.rs  lib.rs  main.rs  networking.rs  peer_watch.rs  server.rs  session_core.rs  socket.rs  state.rs
crates/prism-daemon/tests/: messaging.rs  ping.rs  subscription.rs  unlock_whoami.rs
crates/prism-net/: Cargo.toml
crates/prism-net/src/: behaviour.rs  identity.rs  lib.rs  protocol.rs  swarm.rs
crates/prism-net/tests/: loopback.rs
crates/prism-proto/: Cargo.toml
crates/prism-proto/src/: frame.rs  lib.rs  message.rs  sensitive.rs
docs/: keystore.md  net.md  security-debt.md  sessions.md  specification.md
