# SPDX-License-Identifier: AGPL-3.0-or-later
[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
# Real floor: a resolved dependency (clap_lex) requires edition2024, stabilized
# in Rust 1.85. Verified in CI by the `msrv` job below.
rust-version = "1.85"
publish = false
license = "AGPL-3.0-or-later"
authors = ["The Prism contributors"]
repository = "https://github.com/tou0/Prism"

# Enforced across every crate: the codebase is zero-unsafe (no exceptions).
[workspace.lints.rust]
unsafe_code = "deny"

# No unwrap()/expect() on production paths (core security rule). These are
# re-allowed in tests via clippy.toml (allow-unwrap-in-tests / -expect-in-tests).
# Binaries avoid the #[tokio::main] generated .expect() by building the runtime
# by hand and using `?` (see each main.rs).
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[workspace.dependencies]
# Async runtime. Default features off; each crate opts into what it needs.
tokio = { version = "1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
# Zero-unsafe access to getuid() for the SO_PEERCRED check.
rustix = { version = "1", features = ["process"] }
tempfile = "3"

# M2 — the audited Olm/Megolm protocol implementation (docs/specification.md §5.1,
# docs/sessions.md). default-features = false drops libolm compatibility (we only
# use native pickles).
vodozemac = { version = "0.10", default-features = false }
# Dev-only: property-based tests (spec §15).
proptest = "1"

# M1 — identity & keystore crypto (docs/specification.md §4-5, docs/keystore.md).
# Audited RustCrypto / dalek primitives only; never hand-rolled crypto.
argon2 = "0.5"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["zeroize"] }
blake3 = "1"
bs58 = "0.5"
bip39 = { version = "2", features = ["zeroize"] }
# OS CSPRNG for ALL random material (keys, salts, nonces, mnemonic entropy).
rand_core = { version = "0.6", features = ["std", "getrandom"] }
hkdf = "0.12"
sha2 = "0.10"
zeroize = "1"
secrecy = "0.10"
# No-echo passphrase input in the CLI.
rpassword = "7"
# Dev-only: decoding known-answer test vectors.
hex = "0.4"

# Internal crates.
prism-core = { path = "crates/prism-core" }
prism-proto = { path = "crates/prism-proto" }
prism-net = { path = "crates/prism-net" }

# Argon2id is memory-hard by design (~0.5-1 s optimized) and roughly an order
# of magnitude slower unoptimized, which would make every keystore test crawl.
# Optimize the KDF hot path even in dev/test profiles.
[profile.dev.package.argon2]
opt-level = 3
[profile.dev.package.blake2]
opt-level = 3
