# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "prism-cli"
description = "Prism thin client (prism): talks to the prismd daemon over the local IPC socket."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "prism"
path = "src/main.rs"

[dependencies]
prism-core.workspace = true
prism-proto.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "net", "io-util"] }
anyhow.workspace = true
clap.workspace = true
