# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "prism-core"
description = "Prism core types, identity, cryptography, and keystore (no network or UI dependencies)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
directories = "6"
