# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "prism-core"
description = "Prism core types, identity, cryptography, and keystore (no network or UI dependencies)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
directories = "6"
vodozemac.workspace = true
serde.workspace = true
serde_json.workspace = true
argon2.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
blake3.workspace = true
bs58.workspace = true
bip39.workspace = true
rand_core.workspace = true
hkdf.workspace = true
sha2.workspace = true
zeroize.workspace = true
secrecy.workspace = true

[dev-dependencies]
hex.workspace = true
tempfile.workspace = true
proptest.workspace = true
