# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "prism-daemon"
description = "Prism background daemon (prismd): holds keys, runs the network, and exposes the local IPC socket."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "prism_daemon"
path = "src/lib.rs"

[[bin]]
name = "prismd"
path = "src/main.rs"

[dependencies]
prism-core.workspace = true
prism-proto.workspace = true
prism-net.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "sync"] }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
rustix.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
