# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "prism-net"
description = "Prism libp2p networking layer (transport, discovery, sessions). Placeholder until M2."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
