# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "prism-net"
description = "Prism libp2p networking layer (transport, discovery, sessions). Placeholder until M2."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
prism-core.workspace = true
libp2p = { version = "0.56", default-features = false, features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "mdns",
    "request-response",
    "cbor",
    "macros",
] }
tokio = { workspace = true, features = ["rt", "sync", "macros"] }
futures.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
zeroize.workspace = true

[dev-dependencies]
libp2p-swarm-test = "0.6"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
