# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "prism-proto"
description = "Prism IPC message types and framed serde codec. (Network protobuf/prost wire format arrives with M2.)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "macros", "rt", "time"] }
